# AutoCommitMessage

./: .gitignore  LICENSE  README.md  commit_generator.py  commitgenerator.py  import subprocess.py  llm.py  prompts.py  pyproject.toml  pytest.ini  requirements.txt
autocommitmessage/: commit_generator.py  llm.py
src/: commit_generator.py  prompts.py
src/autocommitmessage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_commit_generator.py  test_e2e_commit_generator.py  test_llm_generation.py
tests/langsmith/: dataset_ini.py  examples.csv  langsmith_ini.py
